--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    GEEREDDY JASHWANTH REDDY
   </footer>
   <script src="index.js"></script>
 </html>
